<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/popup_clone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/popup_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="18.0dip" android:textColor="#ffbfc8c8" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/modify_button" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_below="@+id/icon" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffeeeeee" android:gravity="center" android:id="@+id/viewr" android:background="@drawable/setup_button_green_patch" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="6.0dip" android:text="@string/rename_this_button" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffeeeeee" android:gravity="center" android:id="@+id/rename" android:background="@drawable/setup_button_green_patch" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="6.0dip" android:text="@string/rename_this_button" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffeeeeee" android:gravity="center" android:id="@+id/move" android:background="@drawable/setup_button_green_patch" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="6.0dip" android:text="@string/move_this_button" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffeeeeee" android:gravity="center" android:id="@+id/delete" android:background="@drawable/button_no_patch" android:paddingLeft="0.0dip" android:paddingTop="0.0dip" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="237.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="6.0dip" android:layout_marginBottom="20.0dip" android:text="@string/delete_this_button" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </LinearLayout>
</RelativeLayout>