<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/popup_clone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/popup_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_centerInParent="true">
        <ImageView android:id="@+id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/popup_icon_info" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="18.0dip" android:textColor="#ffbfc8c8" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/err_title_warning" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_below="@id/icon" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ffbfc8c8" android:gravity="center" android:id="@+id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="error txt" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_below="@+id/title" android:layout_centerHorizontal="true" />
        <EditText android:id="@+id/edit" android:background="@drawable/editbox_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:minHeight="40.0dip" android:hint="@string/enter_name_here" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:baselineAligned="false">
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:gravity="center" android:id="@+id/ok" android:background="@drawable/continuebutton_selector" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="6.0dip" android:layout_width="130.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/ok" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:gravity="center" android:id="@+id/cancel" android:background="@drawable/redbutton_selector" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="6.0dip" android:layout_width="130.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/cancel" android:shadowColor="#ff141619" android:shadowDy="-1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>